@@ -4,6 +4,11 @@
 
 - v1.0.1091                                 -
 ---------------------------------------------
+- 2021-03-28                                -
+---------------------------------------------
+.: WSM: Task: Able to add numbers of promotion (WSM-318)
+
+---------------------------------------------
 - 2021-03-26                                -
 ---------------------------------------------
 .: WSM: Task: Allow empty last name (WSM-313)
